--- a/style.css
+++ b/style.css
@@ -40,9 +40,10 @@ a {
     padding: 50px 0px 0px 10px;
 }
 
-button{
+.button{
     background: none;
     border: solid 2px;
+    padding: 10px 30px;
     width: 100px;
     height: 50px;
     color: rgb(227, 186, 255);
